--- a/LearningHard/WebApiClient/MainWindow.xaml
+++ b/LearningHard/WebApiClient/MainWindow.xaml
@@ -1,12 +1,13 @@
-﻿<Window x:Class="Screenshot.MainWindow"
+﻿<Window x:Class="WebApiClient.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:WebApiClient"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="199,176,0,0" VerticalAlignment="Top" Width="75" Click="Btn_Screenshot" />
+        <Button Content="Button" HorizontalAlignment="Left" Margin="207,178,0,0" VerticalAlignment="Top" Width="75" Click="Button_ClickAsync"/>
 
     </Grid>
 </Window>
